syntax = "proto3";

package go.micro.service.projects.invite;

service InviteService {
  // Generate an invite to a user. An email will be sent to this
  // user containing a code which is valid for 24 hours. 
  rpc Generate(GenerateRequest) returns (GenerateResponse) {};
  // Verify is called to ensure a code is valid, e.g has not expired.
  // This rpc should be called when the user opens the link in their
  // email before they create a profile.
  rpc Verify(VerifyRequest) returns (VerifyResponse) {};
  // Redeem is used called after user completes signup and has an account.
  // Now they have an account we can redeem the invite and add the user
  // to the project. Once this rpc is called, the invite code can no longer
  // be used. The email address used when generating the invite must match
  // the email of the user redeeming the token.
  rpc Redeem(RedeemRequest) returns (RedeemResponse) {};
}

message GenerateRequest {
  string project_id = 1;
  string email = 2;
  string name = 3;
}

message GenerateResponse {}

message VerifyRequest {
  string code = 1;
}

message VerifyResponse {
  string project_name = 1;
  string email = 2;
}

message RedeemRequest {
  string user_id = 1;
  string code = 2;
}

message RedeemResponse {}